--- a/sketchfab_test_badges/badges_handler/templates/badges_handler/login.html
+++ b/sketchfab_test_badges/badges_handler/templates/badges_handler/login.html
@@ -16,7 +16,7 @@
 {% endif %}
 {% endif %}
 
-<form method="post" action="{% url 'django.contrib.auth.views.login' %}">
+<form method="post" action="{% url "badges:login" %}">
   {% csrf_token %}
   <table>
     <tr>
